# rustapisrv

./: .env.sample  Cargo.toml  README.md
src/: main.rs
src/adapters/: mod.rs
src/adapters/api/v1/: mod.rs
src/adapters/controllers/v1/: mod.rs
src/adapters/repositories/: user_repository.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/use_cases/: mod.rs
src/framework/database/: connection.rs
src/framework/web/: mod.rs
src/framework/web/v1/: mod.rs
