[package]
name = "rustapisrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
actix-web-actors = "4.3.0"
actix-web-httpauth = "0.8.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
simplelog = "0.12.0"
oracle = { version = "0.6.2", features = ["chrono"] }
dotenv = "0.15"
